[project]
name = "bilibili-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Zheng",email = "yootaoo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "bilibili-api-python (>=17.1.4,<18.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
